--- a/index.html
+++ b/index.html
@@ -1,9 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test page</title>
+<style>
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+
+
+body {background-color: #99ffcc;}
+h1   {color: aaff00;
+	  text-align: center;
+	  text-shadow: 2px 2px white;
+	  font-size: 80px;
+	  font-family: Arial, Helvetica, sans-serif;
+	}
+
+p    {color: green;
+	    text-shadow: 1px 1px white;
+		text-align: center;
+		font-size: 40px;
+	    font-family: Arial, Helvetica, sans-serif;
+
+		}
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  display: block;
+  max-width: 300px;
+  margin: auto;
+  cursor: pointer;
+  
+}
+</style>
 </head>
 <body>
-	<h1>Hello world!</h1>
+
+<h1>SPOT-A-VIBE</h1>
+<p>Welcome to Spot-a-Vibe</p>
+<button class="button">CAMERA</button>
+<img src="logo.png" class="center">
+
 </body>
 </html>
