--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ p    {color: green;
 
 <h1>SPOT-A-VIBE</h1>
 <p>Welcome to Spot-a-Vibe</p>
-<button  onclick="location.href='file:///C:/Users/jangb/Documents/html/camera.html'" type="button" class="button">Take Picture</button>
+<button  onclick="location.href='C:\Users\jangb\GitRepos\html\Spot-a-Vibe\camera.html'" type="button" class="button">Take Picture</button>
 
  
 <script src="app.js"></script>
