--- a/index.html
+++ b/index.html
@@ -1,71 +1,18 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Name of your awesome camera app -->
-    <title>Spot-a-Vibe</title>
-    <!-- Link to your main style sheet-->
-    <link rel="stylesheet" href="style.css">
-<style>
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
+<div class="display-cover">
+    <video autoplay></video>
+    <canvas class="d-none"></canvas>
 
+    <div class="video-options">
+        <select name="" id="" class="custom-select">
+            <option value="">Select camera</option>
+        </select>
+    </div>
 
+    <img class="screenshot-image d-none" alt="">
 
-body {background-color: #99ffcc;}
-h1   {color: aaff00;
-    text-align: center;
-    text-shadow: 2px 2px white;
-    font-size: 80px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-
-p    {color: green;
-      text-shadow: 1px 1px white;
-    text-align: center;
-    font-size: 40px;
-      font-family: Arial, Helvetica, sans-serif;
-
-    }
-.button {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 20px 50px;
-  text-align: center;
-  font-size: 30px;
-  text-decoration: none;
-  display: inline-block;
-  
-  display: block;
-  max-width: 500px;
-  margin: auto;
-  cursor: pointer;
-  
-}
-</style>
-</head>
-<body>
-
-
-
-
-
-<h1>SPOT-A-VIBE</h1>
-<p>Welcome to Spot-a-Vibe</p>
-<button  onclick="location.href='camera.html'" type="button" class="button">Take Picture</button>
-
- 
-<script src="app.js"></script>
-
-
-<img src="logo.png" class="center">
-
-</body>
-</html>
+    <div class="controls">
+        <button class="btn btn-danger play" title="Play"><i data-feather="play-circle"></i></button>
+        <button class="btn btn-info pause d-none" title="Pause"><i data-feather="pause"></i></button>
+        <button class="btn btn-outline-success screenshot d-none" title="ScreenShot"><i data-feather="image"></i></button>
+    </div>
+</div>
