directs to validatipn

--- a/validation.html
+++ b/validation.html
@@ -57,20 +57,10 @@ p    {color: green;
 
 
 
-<h1>CAMERA</h1>
+<h1>validation start</h1>
 
 
- <!-- Camera -->
-    <main id="camera">
-        <!-- Camera sensor -->
-        <canvas id="camera--sensor"></canvas>
-        <!-- Camera view -->
-        <video id="camera--view" autoplay playsinline></video>
-        <!-- Camera output -->
-        <img src="//:0" alt="" id="camera--output">
-        <!-- Camera trigger -->
-        <button onclick="location.href='validation.html'"id="camera--trigger">Take a picture</button>
-    </main>
+ 
 <script src="app.js"></script>
 
 
