--- a/validation.html
+++ b/validation.html
@@ -51,7 +51,7 @@ p    {color: green;
 }
 </style>
 </head>
-<body>
+<body onload="loadPic()">
 
 
 
@@ -62,7 +62,7 @@ p    {color: green;
 
  
 <script src="app.js"></script>
-
+<img id="pic" class="center">
 
 
 
