--- a/validation.html
+++ b/validation.html
@@ -62,7 +62,7 @@ p    {color: green;
 
  
 <script src="app.js"></script>
-<img id="pic" class="center">
+<img id="imageDataURL" class="center">
 
 
 
