--- a/validation.html
+++ b/validation.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,12 +43,12 @@ p    {color: green;
   font-size: 30px;
   text-decoration: none;
   display: inline-block;
-  
+
   display: block;
   max-width: 500px;
   margin: auto;
   cursor: pointer;
-  
+
 }
 </style>
 </head>
@@ -57,10 +58,11 @@ p    {color: green;
 
 
 
-<h1>validation start</h1>
+<!-- <h1>validation start</h1> -->
 
 
- 
+
+
 <script src="app.js"></script>
 <img id="imageDataURL" class="center">
 
