--- a/camera.html
+++ b/camera.html
@@ -78,7 +78,8 @@ p    {color: green;
 <script src="app.js"></script>
 
 
-
+<input type="file" name="myFile" id="fileSelector" accept=".jpg, .jpeg, .png">
 
 </body>
+
 </html>
